hphp/test/zend/good/Zend/tests/traits/bug55554e.php.expectf

Fatal error: Method 'ReportCollision' declared in multiple traits in %s/bug55554e.php on line 17
